# dell-printer

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: testing.yaml
src/dell_printer_parser/: const.py  printer_parser.py
src/dell_printer_parser/model/: events.py  information.py  print_volume.py  status.py
tests/: conftest.py  test_local_endpoint.py  test_parsing.py
tests/fixtures/: response_events.html  response_information.html  response_printer_volume.html  response_status.html
tests/local/: local_endpoint.py  printer.py
tests/model/: test_information.py  test_print_volume.py  test_status.py
