[tool.poetry]
name = "dell-printer-parser"
version = "0.0.1"
description = ""
authors = ["kongo09 <kongo09@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.0.0"

[build-system]
requires = [
    "setuptools >= 42",
    "wheel >= 0.29.0"
]
build-backend = "setuptools.build_meta"