[metadata]
name = dell-printer-parser
version = 0.0.5
author = kongo09
author_email = kongo09@gmail.com
description = A simple parser for DELL laser printers
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
keywords = dell, printer
url = https://github.com/kongo09/dell-printer
project_urls =
    Bug Tracker = https://github.com/kongo09/dell-printer/issues

[options]
zip_safe = False
package_dir =
    = src
packages = find:
platform = any
include_package_data = True
python_requires = >=3.6, != 2.*
test_suite = tests
setup_requires =
    setuptools >=46.4
install_requires = 
    aiohttp>=3.5.2
    beautifulsoup4>=4.10.0
tests_require =
    pytest-aiohttp
    pytest-asyncio
    aioresponses

[options.packages.find]
where = src


[sdist]
formats = zip

[aliases]
test = pytest

[options.extras_require]
test =
    pytest >= 6.2.2
    pytest-asyncio
    pytest-aiohttp
    pytest-cov
all =
    %(test)s